--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,2 +1,33 @@
-
 /* css */
+* {
+  margin: 0;
+  padding: 0;
+}
+
+.container{
+  background-color: #000000;
+  width: 40%;
+  font-family: 'Roboto', sans-serif;
+}
+
+.bottom-circle{
+  background-color: #cccccc;
+}
+
+.white-text{
+  color: #cccccc;
+  font-size: 12px;
+}
+
+.title{
+  font-size: 60px;
+  line-height: 1.0;
+}
+
+.black-text{
+  color: #000000;
+  font-size: 12px;
+  position: absolute;
+  top: 5%;
+  left: 45%;
+}
